--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -1,7 +1,7 @@
   * [Main ↑ Home]
   * [Users Working with redtamarin]
     * [GettingStarted Getting Started]
-      * [GettingStartedInShinyColor More Details, SHiny Color and Screenshots]
+      * [GettingStartedInShinyColor More Details, Shiny Color and Screenshots]
       * [GettingStarted_0_2_5 Getting Started 0.2.5]
     * [IDE HOWTO Setup your IDE]
   * [Coders Programming redtamarin]
