Edited wiki page GettingStartedInShinyColor through web user interface.

--- a/wiki/GettingStartedInShinyColor.wiki
+++ b/wiki/GettingStartedInShinyColor.wiki
@@ -7,7 +7,10 @@ It should work the same for Flash Builder 4.0, but I didn't tested yet.
 
 == Introduction ==
 
-You still need to do the default Getting Started to get the default tools.
+You still need to do the default Getting Started
+  * [GettingStarted#Download_the_shell Download the shell]
+  * a
+  * b
 
 
 == Define a workspace ==
