Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -39,5 +39,6 @@
     * [Examples Examples]
        * [Examples_Socket Socket programming]
     * [Tutorials Tutorials]
+      * [TutorialsVideo Video Tutorials]
     * [FAQ FAQ]
   
