--- a/wiki/Tutorials.wiki
+++ b/wiki/Tutorials.wiki
@@ -1,4 +1,4 @@
 #summary different tutorials to get you started.
 #labels Featured,Phase-Deploy,Phase-Support
 
-
+[http://blog.eversonalves.com.br/2011/02/05/command-line-scripts-in-actionscript-with-classes-using-redtamarin/ Command line scripts in actionscript with classes using redtamarin]
