--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -2,7 +2,7 @@
   * [Users Working with redtamarin]
     * [GettingStarted Getting Started]
       * [GettingStartedInShinyColor More Details, Shiny Color and Screenshots]
-    * [GettingStarted_0_2_5 Getting Started 0.2.5]
+    * [GettingStarted_0_2_5 Getting Started 0.2.5 (old)]
       * [IDE HOWTO Setup your IDE]
   * [Coders Programming redtamarin]
     * [Organization Organization]
