--- a/wiki/TutorialsVideo.wiki
+++ b/wiki/TutorialsVideo.wiki
@@ -1,5 +1,10 @@
 #summary video tutorials.
 
+== Videos for v0.3 ==
+
+<wiki:video url="http://www.youtube.com/watch?v=0Nk8XmQZEtY"/>
+
+
 == Videos for v0.2.5 ==
 
 || <wiki:gadget url="http://redtamarin.googlecode.com/svn/gadgets/introduction_to_redtamarin.xml" width="480" height="385" border="0" /> || <wiki:gadget url="http://redtamarin.googlecode.com/svn/gadgets/introduction_to_redtamarin-script.xml" width="600" height="400" border="0" /> ||
