--- a/wiki/GettingStartedInShinyColor.wiki
+++ b/wiki/GettingStartedInShinyColor.wiki
@@ -2,9 +2,8 @@
 #labels Featured
 
 Here a small tutorial from start to finnish<br>
-to get you started writing code for redtamarin in Flex Builder 3.0<br>
-<br>
-It should work the same for Flash Builder 4.0, but I didn't tested yet.
+to get you started writing code for redtamarin in Flex Builder 3.0 or Flash Builder 4.0
+
 
 == Introduction ==
 
